SPRING WEB FLOW (SWF) CHANGELOG
=========================
http://www.springframework.org

Changes in version 1.0 (30.6.2006)
------------------------------------
Package org.springframework.webflow.execution
* Renamed ConversationService.begin to "beginConversation".

Package org.springframework.webflow.samples
* Simplified 'flowLauncher' to take advantage of latest attribute mapping features.
* Simplified 'fileUpload' to take advantage of convenient MultipartFile parameter access support.

Changes in version 1.0 RC2 (09.6.2006)
------------------------------------

Overall
* Moved project source control (with history preserved) to sourceforge subversion (SVN) repository at:
      https://svn.sourceforge.net/svnroot/springframework/spring-projects/trunk
* Updated projects structure to maven2 standard (e.g. src/main/java, src/test/java).
* Spring-projects JAR repository structure now follows maven2 standard.

Package org.springframework.webflow
* Removed 'requiredType' not null check on AttributeMap accessor methods; if no requiredType is specified
  the type assert is simply not performed.
* Fixed bug in Flow.end where outputMapper source and target arguments were backwards.
* Removed unused constructors in AttributeMap.
* Added CollectionUtils.singleEntryMap for easily populating a UnmodifiableAttributeMap with a single attribute.
* AttributeMap, UnmodifiableAttributeMap, and ParameterMap implement equals and hashCode now.

Package org.springframework.webflow.action
* Moved MultiAction.METHOD_ATTRIBUTE constant to AnnotatedAction.METHOD_ATTRIBUTE.
* Made FormAction.formObjectScope default ScopeType.FLOW instead of ScopeType.REQUEST.
* Improved FormAction debug logging.
* Removed FormAction.bindOnSetupForm flag for simplicity--if you need to perform a bind operation before
  entering a view state simply invoke the 'bind' action method from your flow definition.
* Removed FormAction.validateOnBinding flag for simplicity--if you need to dynamically calculate if 